--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=event
+server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eventbox
 spring.datasource.username=root
