--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jackson.serialization.fail_on_empty_beans=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
