--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eventbox
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#spring.datasource.url=jdbc:mysql://root:NlbkJIekPYXKzscIGySpeSGnKbLyoPkL@mainline.proxy.rlwy.net:55819/railway
+#spring.datasource.username=root
+#spring.datasource.password=NlbkJIekPYXKzscIGySpeSGnKbLyoPkL
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jackson.serialization.indent_output=true
 spring.jackson.serialization.fail_on_empty_beans=false
 
