--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=event
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/eventbox
+spring.datasource.url=jdbc:mysql://localhost:3306/event_db
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
